--- a/style.css
+++ b/style.css
@@ -307,8 +307,8 @@ button {
     font-size: 14px;
   }
 
-  footer p {
-    font-size: 10px;
+  footer {
+    font-size: 8px;
   }
 
   .member-description {
